added txt for rules

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         </div>
         <div>
         <button id="roll">Roll</button>
+        <div>
+            <p>GET TO SCORE OF 20 TO WIN</p>
+        </div>
+        <div>
+            <p>IF YOU ROLL A ONE YOU LOSE</p>
+        </div>
     </div>
     </div>
 
