--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div>
         <button id="roll">Roll</button>
         <div>
-            <p>GET TO SCORE OF 20 TO WIN</p>
+            <p>GET TO A SCORE OF 20 OR MORE TO WIN </p>
         </div>
         <div>
             <p>IF YOU ROLL A ONE YOU LOSE</p>
